NOTES
1. DockerProvider - line 167, 176, 222


pbs qsub - scheduler
comet, htcondor

knot csc ucsb - stochss backend

molns azure

openstack installation on campus cluster

gillespy



1. sudo rm -rf /usr/local/pyurdme;sudo mkdir -p /usr/local/pyurdme;sudo chown ubuntu /usr/local/pyurdme
    rm: invalid option -- 'p'
------no user ubuntu in container

2. cp MOLNS_notebooks/*.ipynb .;rm -rf MOLNS_notebooks;
 cp: target 'MOLNS_notebooks;' is not a directory


            3. sudo add-apt-repository -y ppa:fenics-packages/fenics
 sudo: add-apt-repository: command not found


4. cd ipython && git checkout 3.0.0-molns_fixes && python setup.py submodule && sudo python setup.py install
 rpc error: code = 2 desc = "oci runtime error: exec failed: exec: \"cd\": executable file not found in $PATH"
--------cd is a built in shell command

5. Command: sudo gpasswd -a ubuntu fuse
 gpasswd: user 'ubuntu' does not exist
-----------

            6. ipython executable not found in path

            7. wget not found in path



DEBUG:root:Docker Container ID: 1ad1360d83bbec1b014c7bf3f056bc526e38c9b31fb4f36259c9f8aa29f9714e         Command: python -c "from IPython.external import mathjax; mathjax.install_mathjax(tag='2.2.0')"
DEBUG:requests.packages.urllib3.connectionpool:"POST /v1.22/containers/1ad1360d83bbec1b014c7bf3f056bc526e38c9b31fb4f36259c9f8aa29f9714e/exec HTTP/1.1" 201 74
DEBUG:requests.packages.urllib3.connectionpool:"POST /v1.22/exec/e04dc8a240fb3c35a117833239b1712fb23aaaa08fb8a216cdfd2008bd776978/start HTTP/1.1" 200 None
DEBUG:requests.packages.urllib3.connectionpool:"GET /v1.22/exec/e04dc8a240fb3c35a117833239b1712fb23aaaa08fb8a216cdfd2008bd776978/json HTTP/1.1" 200 458
RETURN VALUE: {u'OpenStderr': True, u'OpenStdout': True, u'ContainerID': u'1ad1360d83bbec1b014c7bf3f056bc526e38c9b31fb4f36259c9f8aa29f9714e', u'DetachKeys': u'', u'CanRemove': False, u'Running': False, u'ProcessConfig': {u'tty': False, u'entrypoint': u'/bin/bash', u'arguments': [u'-c', u'python -c from', u'IPython.external', u'import', u'mathjax;', u'mathjax.install_mathjax(tag=2.2.0)'], u'privileged': False}, u'ExitCode': 1, u'ID': u'e04dc8a240fb3c35a117833239b1712fb23aaaa08fb8a216cdfd2008bd776978', u'OpenStdin': False}
ERROR
RESPONSE:   File "<string>", line 1
    from
       ^
SyntaxError: invalid syntax


